use min height to ensure proper overflow

--- a/static/css/timetable/partials/compare_timetable_sidebar.scss
+++ b/static/css/timetable/partials/compare_timetable_sidebar.scss
@@ -69,5 +69,5 @@
 }
 
 .slots-wrapper {
-  height: 80%;
+  min-height: 80%;
 }
